--- a/css/style1.css
+++ b/css/style1.css
@@ -42,11 +42,11 @@
 }
 
 .cb-slideshow li:nth-child(1) span { 
-    background-image: url(../img/fondo2.jpg);
+    background-image: url(../img/altamira/04.jpg);
 }
 
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(../img/contacto.jpg);
+    background-image: url(../img/altamira/11.jpg);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -54,7 +54,7 @@
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(../img/entreganos.jpg);
+    background-image: url(../img/altamira/12.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -62,7 +62,15 @@
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(../img/fondo4.JPG);
+    background-image: url(../img/altamira/14.jpg);
+    -webkit-animation-delay: 18s;
+    -moz-animation-delay: 18s;
+    -o-animation-delay: 18s;
+    -ms-animation-delay: 18s;
+    animation-delay: 18s; 
+}
+.cb-slideshow li:nth-child(5) span { 
+    background-image: url(../img/altamira/24.jpg);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -89,6 +97,13 @@
     -o-animation-delay: 18s;
     -ms-animation-delay: 18s;
     animation-delay: 18s; 
+}
+.cb-slideshow li:nth-child(5) div { 
+    -webkit-animation-delay: 24s;
+    -moz-animation-delay: 24s;
+    -o-animation-delay: 24s;
+    -ms-animation-delay: 24s;
+    animation-delay: 24s; 
 }
 
 /* Animation for the slideshow images */
