Se corrige menú en dispositivos móviles.

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -514,7 +514,7 @@ a.glyphicon{text-decoration: none;cursor: pointer;}
     display:none;
     width:0px;
     height:100%;
-    position:absolute;
+    position:fixed;
     left:0;
     top:0;
     z-index:999999;
