--- a/css/style1.css
+++ b/css/style1.css
@@ -42,11 +42,11 @@
 }
 
 .cb-slideshow li:nth-child(1) span { 
-    background-image: url(../img/altamira/latirana01.jpg);
+    background-image: url(../img/altamira/04.jpg);
 }
 
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(../img/altamira/latirana02.jpg);
+    background-image: url(../img/altamira/altamira_fondo1.jpeg);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -54,7 +54,7 @@
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(../img/altamira/latirana03.jpg);
+    background-image: url(../img/altamira/12.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -62,7 +62,7 @@
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(../img/altamira/latirana04.jpg);
+    background-image: url(../img/altamira/24.jpg);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
